<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddBucketlistEntry">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_entry"
        android:background="@color/cyan"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        />

    <ScrollView
        android:id="@+id/sv_add_entry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding"
            android:background="@drawable/shadow_login">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:theme="@style/CustomTextLabel"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:elevation="@dimen/box_elevation"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_title_hint"
                    android:autofillHints="Titel"
                    android:background="@drawable/image_view_border"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/cyan"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/img_add_entry"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height_add_entry"
                android:layout_marginVertical="5dp"
                app:layout_constraintCircleRadius="@dimen/border_radius"
                android:src="@drawable/placeholder_image_300x225"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@+id/til_title"
                android:background="@drawable/image_view_border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:layout_constraintTop_toBottomOf="@id/img_add_entry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:theme="@style/CustomTextLabel"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:elevation="@dimen/box_elevation"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="24dp"
                    android:hint="@string/et_datetime"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/image_view_border"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/cyan"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:layout_constraintTop_toBottomOf="@id/til_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:theme="@style/CustomTextLabel"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:elevation="@dimen/box_elevation"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="24dp"
                    android:hint="@string/et_location"
                    android:autofillHints="Ort"
                    android:background="@drawable/image_view_border"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/cyan"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="5dp"
                android:theme="@style/CustomTextLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location"
                android:gravity="top"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:elevation="@dimen/box_elevation"
                app:hintEnabled="false">
                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_description"
                    android:paddingBottom="24dp"
                    android:autofillHints="Beschreibung"
                    android:hint="@string/et_description"
                    android:background="@drawable/image_view_border"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/cyan"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="5dp"
                app:layout_constraintTop_toBottomOf="@+id/til_description"
                android:text="@string/btn_save"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>