<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailView">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_entry_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cyan"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_entry_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_entry_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_entry_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height_add_entry"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_image_300x225"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CustomTextLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_entry_detail">

                <TextView
                    android:id="@+id/tv_date_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="Datum"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/et_datetime"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CustomTextLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_date_detail">

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="Ort"
                    android:hint="@string/et_location"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="top"
                android:theme="@style/CustomTextLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location_detail">

                <TextView
                    android:id="@+id/tv_description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/et_description"
                    android:autofillHints="Beschreibung"
                    android:hint="@string/et_description"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>